# knowledge-os

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.yml  render.yaml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 101a38a57c63_create_conversation_tables.py  20260606_0001_auth_projects.py  20260621_0001_add_chunk_page_provenance.py  274853379664_add_ingestion_metrics_and_metadata.py  2f32957df35e_create_chunk_embeddings_table.py  35bf1154174d_create_workflow_tables.py  6b1d8d7026bc_add_message_status_and_sequence.py  8c3dc169c23f_create_llm_usage_table.py  9944056df44e_create_document_tables.py  b12915e3df08_add_refresh_session_indexes.py  ccf798388b9c_create_document_chunks_table.py
backend/src/knowledge_os/: __init__.py  config.py  main.py  worker.py
backend/tests/api/: test_config_routes.py  test_rag_routes.py  test_retrieval_routes.py  test_routes.py  test_workflow_routes.py
backend/tests/integration/: test_chunk_embedding_repository.py  test_conversation_repository.py  test_document_chunk_repository.py  test_document_repository.py  test_llm_usage_repository.py  test_rag_integration.py  test_retrieval_integration.py
backend/tests/unit/: fakes.py  test_auth_service.py  test_citation_normalization.py  test_context_builder.py  test_conversation_service.py  test_document_service.py  test_embeddings.py  test_extraction.py  test_project_service.py  test_rag_service.py  test_regression.py  test_retrieval.py  test_workflows.py
(+85 files in other folders)
